compiler/test/conformance/valid/decl_import_named.tu
// decl: import nomeado, com alias (as) e trailing comma
import { add, multiply as mul, square, } from "conf_mathmod"

fn main() {
  print(add(1, 2))
  print(mul(3, 4))
  print(square(5))
}
