compiler/test/conformance/invalid/inv_import_no_from.tu
// INVÁLIDO: import nomeado sem "from"
import { add } "conf_mathmod"

fn main() {
  print(add(1, 2))
}
